--- a/index.html
+++ b/index.html
@@ -1,203 +1,150 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-
     <title>Sujoy Sen | Portfolio</title>
 
-    <meta name="description" content="Portfolio of Sujoy Sen - Computer Science Undergraduate, Web Developer and Cloud Enthusiast">
+    <meta name="description" content="Portfolio of Sujoy Sen, Computer Science Engineer at PES University">
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
     <!-- Normalize -->
     <link href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.min.css" rel="stylesheet">
 
     <!-- Font Awesome -->
-    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.15.4/css/all.css">
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.1/css/all.css">
 
-    <!-- Google Font -->
-    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;600&display=swap" rel="stylesheet">
-
-    <!-- Styles -->
-    <style>
-        body {
-            font-family: 'Poppins', sans-serif;
-            margin: 0;
-            background: #f4f6f8;
-            color: #333;
-        }
-
-        header {
-            background: #0f172a;
-            color: white;
-            padding: 40px 0;
-        }
-
-        .wrapper {
-            width: 90%;
-            max-width: 1100px;
-            margin: auto;
-        }
-
-        header h1 {
-            margin: 0;
-            font-size: 36px;
-        }
-
-        nav ul {
-            list-style: none;
-            padding: 0;
-            display: flex;
-            gap: 20px;
-        }
-
-        nav a {
-            color: white;
-            text-decoration: none;
-            font-weight: 500;
-        }
-
-        section {
-            padding: 60px 0;
-        }
-
-        h2 {
-            text-align: center;
-            margin-bottom: 40px;
-        }
-
-        .projects {
-            display: grid;
-            grid-template-columns: repeat(auto-fit, minmax(280px, 1fr));
-            gap: 25px;
-        }
-
-        .card {
-            background: white;
-            padding: 20px;
-            border-radius: 10px;
-            box-shadow: 0 5px 10px rgba(0,0,0,0.1);
-        }
-
-        .card img {
-            width: 100%;
-            border-radius: 6px;
-        }
-
-        .about {
-            display: flex;
-            flex-wrap: wrap;
-            gap: 40px;
-            align-items: center;
-        }
-
-        .about img {
-            width: 250px;
-            border-radius: 50%;
-        }
-
-        footer {
-            background: #0f172a;
-            color: white;
-            text-align: center;
-            padding: 20px;
-        }
-
-        .social a {
-            color: white;
-            margin: 0 10px;
-            font-size: 20px;
-        }
-    </style>
+    <!-- Your CSS -->
+    <link href="styles.css" rel="stylesheet">
 </head>
 
 <body>
 
 <!-- HEADER -->
-<header>
+<header class="primary">
     <div class="wrapper">
-        <h1>Sujoy Sen</h1>
-        <p>B.Tech CSE | PES University | SRN: PES2UG23CS621</p>
 
-        <nav>
+        <div class="logo-container">
+            <h1>Sujoy<br>Sen<br>Portfolio</h1>
+            <img src="https://dummyimage.com/175/c4c4c4/fff&text=Logo" alt="logo" id="logo">
+        </div>
+
+        <nav id="mainnav">
             <ul>
                 <li><a href="#work">Projects</a></li>
-                <li><a href="#about">About</a></li>
-                <li><a href="#contact">Contact</a></li>
+                <li><a href="#about-contact">About</a></li>
+                <li><a href="#about-contact">Contact</a></li>
             </ul>
         </nav>
+
     </div>
 </header>
 
-<!-- PROJECTS -->
+<!-- WORK SECTION -->
 <section id="work">
     <div class="wrapper">
+
         <h2>My Projects</h2>
 
-        <div class="projects">
+        <section class="featured">
+            <article>
+                <img src="https://dummyimage.com/510x300/c4c4c4/fff&text=Featured+Project" alt="project">
+            </article>
 
-            <div class="card">
-                <img src="https://dummyimage.com/400x250/000/fff&text=Cloud+Storage" alt="">
+            <article>
+                <h3>PatreonHive – Subscription Platform</h3>
+                <h4>Full Stack Web Application</h4>
+                <p>
+                    Developed a Patreon-style platform using Next.js, MongoDB, and Razorpay.
+                    Implemented secure authentication, payments, and creator dashboards.
+                </p>
+                <p>
+                    <a href="https://patreonhive.vercel.app" target="_blank">
+                        View Live Project
+                    </a>
+                </p>
+            </article>
+        </section>
+
+        <section class="projects">
+
+            <article>
+                <h3>Distributed Monitoring System</h3>
+                <img src="https://dummyimage.com/340x200/c4c4c4/fff&text=Kafka+Project">
+                <p><strong>Tech:</strong> Kafka, Spark, Linux</p>
+                <p>Real-time monitoring system for CPU, memory and network usage.</p>
+            </article>
+
+            <article>
+                <h3>Charity Fundraiser Tracker</h3>
+                <img src="https://dummyimage.com/340x200/c4c4c4/fff&text=Web+App">
+                <p><strong>Tech:</strong> Next.js, MongoDB</p>
+                <p>Platform to manage donations and campaigns with analytics.</p>
+            </article>
+
+            <article>
                 <h3>Cloud Object Storage</h3>
-                <p>Implemented object storage using Supabase with Python API and public image hosting.</p>
-            </div>
+                <img src="https://dummyimage.com/340x200/c4c4c4/fff&text=Cloud">
+                <p><strong>Tech:</strong> Supabase, Python</p>
+                <p>Uploaded and managed files using object storage APIs.</p>
+            </article>
 
-            <div class="card">
-                <img src="https://dummyimage.com/400x250/000/fff&text=Serverless" alt="">
+            <article>
                 <h3>Serverless Function</h3>
-                <p>Built and deployed a Python serverless function using Napkin.</p>
-            </div>
+                <img src="https://dummyimage.com/340x200/c4c4c4/fff&text=Serverless">
+                <p><strong>Tech:</strong> Napkin, Python</p>
+                <p>Deployed Python-based cloud function using FaaS.</p>
+            </article>
 
-            <div class="card">
-                <img src="https://dummyimage.com/400x250/000/fff&text=Portfolio" alt="">
-                <h3>Portfolio Website</h3>
-                <p>Deployed responsive portfolio using GitHub and Vercel.</p>
-            </div>
+        </section>
 
-        </div>
     </div>
 </section>
 
-<!-- ABOUT -->
-<section id="about">
-    <div class="wrapper about">
-        <img src="https://dummyimage.com/250x250/000/fff&text=Your+Photo" alt="Profile">
+<!-- ABOUT & CONTACT -->
+<section id="about-contact" class="secondary">
+    <div class="wrapper">
 
-        <div>
+        <div class="profile-photo">
+            <img src="https://dummyimage.com/260x260/000/fff&text=Your+Photo" alt="photo">
+        </div>
+
+        <article>
             <h2>About Me</h2>
             <p>
-                I am a Computer Science Engineering student at PES University.
-                I am interested in Cloud Computing, Web Development, and Software Engineering.
-                I enjoy building real-world applications and learning new technologies.
+                I am Sujoy Sen, a Computer Science Engineering student at PES University
+                with strong interest in Software Development, Cloud Computing, and
+                Distributed Systems.
             </p>
 
             <h3>Skills</h3>
-            <ul>
-                <li>HTML, CSS, JavaScript</li>
-                <li>Python</li>
-                <li>Cloud Computing (Supabase, Vercel)</li>
-                <li>Git & GitHub</li>
-            </ul>
-        </div>
+            <p>
+                Java, C++, Python, JavaScript, React, Node.js, MongoDB, SQL,
+                Git, Linux, Cloud Computing
+            </p>
+        </article>
+
+        <article>
+            <h2>Contact</h2>
+            <p>
+                <i class="fa fa-envelope"></i> sujoysenmail@gmail.com<br>
+                <i class="fa fa-phone"></i> +91 8104680815
+            </p>
+
+            <p class="social">
+                <a href="https://github.com/Kingjoy7"><i class="fab fa-github"></i></a>
+                <a href="https://linkedin.com/in/sujoy-sen710"><i class="fab fa-linkedin"></i></a>
+                <a href="https://leetcode.com/u/Kingjoy7/"><i class="fas fa-code"></i></a>
+            </p>
+        </article>
+
     </div>
 </section>
 
-<!-- CONTACT -->
-<section id="contact">
+<!-- FOOTER -->
+<footer class="primary">
     <div class="wrapper">
-        <h2>Contact Me</h2>
-        <p>Email: sujoysenmail@gmail.com</p>
-        <p>Phone: +91-8104680815</p>
-
-        <div class="social">
-            <a href="#"><i class="fab fa-linkedin"></i></a>
-            <a href="#"><i class="fab fa-github"></i></a>
-            <a href="#"><i class="fab fa-twitter"></i></a>
-        </div>
+        <p class="centered">© 2026 Sujoy Sen | PES2UG23CS621</p>
     </div>
-</section>
-
-<footer>
-    <p>© 2026 Sujoy Sen | PES2UG23CS621</p>
 </footer>
 
 </body>
